# timer

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  cmake-variants.yaml
cmake/: compiler_specific.cmake  export.cmake  flags.cmake  googletest.cmake  sanitizer.cmake
include/: definitions.hpp  timer.hpp
src/: CMakeLists.txt  timer.cpp
tests/: CMakeLists.txt  Duration.cpp  TimerId.cpp  ValidTimer.cpp
